EX2/tests_ex22/tough_test/expected/errors.txt
students/biu_student_terrible/cccgcc.c:6:2: error: expected identifier or '(' before '}' token
    6 | }}
      |  ^